--- a/arch/arm/configs/gt_i5700_defconfig
+++ b/arch/arm/configs/gt_i5700_defconfig
@@ -43,8 +43,8 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
-# CONFIG_KERNEL_LZMA is not set
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_LZMA=y
+# CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -103,7 +103,7 @@ CONFIG_SYSFS_DEPRECATED=y
 CONFIG_SYSFS_DEPRECATED_V2=y
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="${INITRAMFS_SOURCE_PATH}/initramfs_list"
+CONFIG_INITRAMFS_SOURCE="/home/coldreaver/android/Dev/kernel/initramfs/initramfs_list"
 CONFIG_INITRAMFS_ROOT_UID=0
 CONFIG_INITRAMFS_ROOT_GID=0
 CONFIG_RD_GZIP=y
@@ -112,9 +112,9 @@ CONFIG_RD_LZMA=y
 CONFIG_RD_XZ=y
 CONFIG_RD_LZO=y
 # CONFIG_INITRAMFS_COMPRESSION_NONE is not set
-CONFIG_INITRAMFS_COMPRESSION_GZIP=y
+# CONFIG_INITRAMFS_COMPRESSION_GZIP is not set
 # CONFIG_INITRAMFS_COMPRESSION_BZIP2 is not set
-# CONFIG_INITRAMFS_COMPRESSION_LZMA is not set
+CONFIG_INITRAMFS_COMPRESSION_LZMA=y
 # CONFIG_INITRAMFS_COMPRESSION_XZ is not set
 # CONFIG_INITRAMFS_COMPRESSION_LZO is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
@@ -357,7 +357,7 @@ CONFIG_S3C64XX_SETUP_SDHCI_GPIO=y
 # CONFIG_MACH_SMARTQ5 is not set
 # CONFIG_MACH_SMARTQ7 is not set
 CONFIG_MACH_GT_I5700=y
-# CONFIG_SPICA_AHB_166 is not set
+CONFIG_SPICA_AHB_166=y
 
 #
 # Processor Type
@@ -1066,6 +1066,7 @@ CONFIG_BCMDHD=m
 CONFIG_BCMDHD_FW_PATH="/system/etc/fw_bcm4325.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/nvram.txt"
 CONFIG_BCMDHD_WEXT=y
+# CONFIG_DHD_USE_STATIC_BUF is not set
 # CONFIG_HOSTAP is not set
 
 #
@@ -1410,6 +1411,10 @@ CONFIG_MEDIA_TUNER_CUSTOMISE=y
 # CONFIG_MEDIA_TUNER_TDA18218 is not set
 # CONFIG_MEDIA_TUNER_TDA18212 is not set
 CONFIG_VIDEO_V4L2=y
+CONFIG_V4L2_MEM2MEM_DEV=m
+CONFIG_VIDEOBUF2_CORE=m
+CONFIG_VIDEOBUF2_MEMOPS=m
+CONFIG_VIDEOBUF2_DMA_CONTIG=m
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
@@ -1483,6 +1488,7 @@ CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_OV7670 is not set
 # CONFIG_VIDEO_MT9V011 is not set
 # CONFIG_VIDEO_TCM825X is not set
+CONFIG_VIDEO_S5K4CA=m
 
 #
 # Video improvement chips
@@ -1498,6 +1504,7 @@ CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_SR030PC30 is not set
 # CONFIG_VIDEO_NOON010PC30 is not set
 # CONFIG_SOC_CAMERA is not set
+CONFIG_VIDEO_SAMSUNG_S3C_FIMC=m
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_RADIO_ADAPTERS is not set
 
@@ -1611,7 +1618,7 @@ CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
 # CONFIG_USB_GADGET_DEBUG_FS is not set
-CONFIG_USB_GADGET_VBUS_DRAW=2
+CONFIG_USB_GADGET_VBUS_DRAW=250
 CONFIG_USB_GADGET_SELECTED=y
 # CONFIG_USB_GADGET_FUSB300 is not set
 # CONFIG_USB_GADGET_R8A66597 is not set
