--- a/arch/arm/configs/gt_i5700_defconfig
+++ b/arch/arm/configs/gt_i5700_defconfig
@@ -44,8 +44,8 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
 # CONFIG_KERNEL_GZIP is not set
-# CONFIG_KERNEL_LZMA is not set
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_LZMA=y
+# CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -104,7 +104,7 @@ CONFIG_SYSFS_DEPRECATED=y
 CONFIG_SYSFS_DEPRECATED_V2=y
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="${INITRAMFS_SOURCE_PATH}/initramfs_list"
+CONFIG_INITRAMFS_SOURCE="/home/coldreaver/android/Dev/kernel/initramfs/initramfs_list"
 CONFIG_INITRAMFS_ROOT_UID=0
 CONFIG_INITRAMFS_ROOT_GID=0
 CONFIG_RD_GZIP=y
@@ -359,7 +359,7 @@ CONFIG_S3C64XX_SETUP_SDHCI_GPIO=y
 # CONFIG_MACH_SMARTQ7 is not set
 CONFIG_MACH_GT_I5700=y
 # CONFIG_SPICA_AHB_166 is not set
-# CONFIG_SPICA_CPU_667_AHB_166 is not set
+CONFIG_SPICA_CPU_667_AHB_166=y
 
 #
 # Processor Type
